# OxidePDF

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
crates/oxidepdf-cli/: Cargo.toml  build.rs
crates/oxidepdf-cli/src/: adv.rs  args.rs  compare.rs  completion.rs  edit.rs  inspect.rs  lib.rs  main.rs  security.rs  sign.rs  stdin.rs  workflow.rs
crates/oxidepdf-cli/tests/: adv.rs  cli.rs  compare.rs  edit.rs  inspect.rs  release_assets.rs  run_workflow.rs  sign.rs  signature_research_docs.rs  workflow_ops.rs
crates/oxidepdf-cli/tests/common/: mod.rs
crates/oxidepdf-core/: Cargo.toml
crates/oxidepdf-core/examples/: gen_fixture.rs  gen_sig_fixture.rs
crates/oxidepdf-core/src/: annotations.rs  attachments.rs  compare.rs  compression.rs  errors.rs  forms.rs  interactive.rs  lib.rs  metadata.rs  operators.rs  outlines.rs  overlay.rs  page_ops.rs  pdf_io.rs  security.rs  signatures.rs  tests.rs  workflow.rs
crates/oxidepdf-core/tests/: annotations.rs  attachments.rs  compare.rs  compression.rs  forms.rs  interactive.rs  metadata.rs  outlines.rs  overlay.rs  page_ops.rs  security.rs  signatures.rs  workflow.rs
crates/oxidepdf-core/tests/common/: mod.rs
crates/oxidepdf-web/: Cargo.toml
crates/oxidepdf-web/src/: lib.rs
scripts/: check.sh  release.sh
