[workspace]
members = [
    "crates/oxidepdf-core",
    "crates/oxidepdf-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
hayro = "0.7.1"
oxidepdf-core = { path = "crates/oxidepdf-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
lopdf = { version = "0.38.0", default-features = false }
pdf-extract = "0.10.0"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "webp"] }
imageproc = { version = "0.25.1", default-features = false }
pdf-writer = "0.15.0"
svg2pdf = { version = "0.13.0", default-features = false }
usvg = { version = "0.45.1", default-features = false }
resvg = { version = "0.45.1", default-features = false }
fontdb = { version = "0.23.0", default-features = false, features = ["fs", "std"] }
skrifa = { version = "0.30.0", default-features = false, features = ["std"] }
read-fonts = { version = "0.28.0", default-features = false }
pem-rfc7468 = { version = "1.0.0-rc.1", features = ["alloc"] }
x509-cert = "0.2.5"
assert_cmd = "2.1.1"
predicates = "3.1.3"
