[workspace]
members = [
    "crates/oxidepdf-core",
    "crates/oxidepdf-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
cms = { version = "0.2.3", features = ["builder", "std"] }
const-oid = "0.9.6"
der = { version = "0.7.10", features = ["alloc"] }
hayro = "0.7.1"
oxidepdf-core = { path = "crates/oxidepdf-core" }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "pem", "pkcs8", "sha256", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
signature = "2.2.0"
spki = "0.7.3"
thiserror = "2.0.17"
lopdf = { version = "0.38.0", default-features = false }
rand = "0.9.2"
rsa = { version = "0.9.8", default-features = false, features = ["std", "sha2"] }
pdf-extract = "0.10.0"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "webp"] }
imageproc = { version = "0.25.1", default-features = false }
pdf-writer = "0.15.0"
svg2pdf = { version = "0.13.0", default-features = false }
usvg = { version = "0.45.1", default-features = false }
resvg = { version = "0.45.1", default-features = false }
fontdb = { version = "0.23.0", default-features = false, features = ["fs", "std"] }
skrifa = { version = "0.30.0", default-features = false, features = ["std"] }
read-fonts = { version = "0.28.0", default-features = false }
pem-rfc7468 = { version = "1.0.0-rc.1", features = ["alloc"] }
x509-cert = { version = "0.2.5", features = ["builder"] }
zeroize = "1.8.2"
assert_cmd = "2.1.1"
predicates = "3.1.3"
