[package]
name = "oxidepdf-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line interface for OxidePDF."

[[bin]]
name = "oxidepdf"
path = "src/main.rs"

[dependencies]
clap.workspace = true
oxidepdf-core.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
