[package]
name = "oxidepdf-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line interface for OxidePDF."

[[bin]]
name = "oxidepdf"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
oxidepdf-core.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[build-dependencies]
clap.workspace = true
clap_complete.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
der.workspace = true
image.workspace = true
lopdf.workspace = true
p256.workspace = true
predicates.workspace = true
spki.workspace = true
x509-cert.workspace = true
