[package]
name = "oxidepdf-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core contracts and operators for OxidePDF."

[features]
default = []

[dependencies]
hayro.workspace = true
image.workspace = true
lopdf.workspace = true
pdf-extract.workspace = true
pdf-writer.workspace = true
resvg.workspace = true
serde.workspace = true
svg2pdf.workspace = true
thiserror.workspace = true
usvg.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
