[package]
name = "oxidepdf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core contracts and operators for OxidePDF."

[features]
default = []

[dependencies]
cms.workspace = true
const-oid.workspace = true
der.workspace = true
hayro.workspace = true
image.workspace = true
imageproc.workspace = true
lopdf.workspace = true
p256.workspace = true
pdf-extract.workspace = true
pdf-writer.workspace = true
pem-rfc7468.workspace = true
rand.workspace = true
rayon.workspace = true
rsa.workspace = true
resvg.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
signature.workspace = true
spki.workspace = true
fontdb.workspace = true
skrifa.workspace = true
read-fonts.workspace = true
svg2pdf.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tiverse-mmap.workspace = true
usvg.workspace = true
x509-cert.workspace = true
zeroize.workspace = true

[dev-dependencies]
der.workspace = true
image.workspace = true
lopdf.workspace = true
p256.workspace = true
pdf-writer.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
spki.workspace = true
x509-cert.workspace = true
